[package]
name = "grrs_ck"
version = "0.1.0"
authors = ["Chandra Kiran G <chandrakiran.g19@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A tool to search files"
readme = "README.md"
homepage = "https://github.com/kiran-4444/grrs"
repository = "https://github.com/kiran-4444/grrs"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
assert_fs = "1.0.13"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.3"
